@@ -40,7 +40,7 @@ public class CCustomerTypeService extends CTypeEntityService<CCustomerType> impl
 		try {
 			final long usageCount = customerRepository.countByType(entity);
 			if (usageCount > 0) {
-				return String.format("Cannot delete. It is being used by %d customer%s.", usageCount, usageCount == 1 ? "" : "s");
+				return "Cannot delete. It is being used by %d customer%s.".formatted(usageCount, usageCount == 1 ? "" : "s");
 			}
 			return null;
 		} catch (final Exception e) {
@@ -64,13 +64,14 @@ public class CCustomerTypeService extends CTypeEntityService<CCustomerType> impl
 	@Override
 	public void initializeNewEntity(final Object entity) {
 		super.initializeNewEntity(entity);
-		if (entity instanceof final CEntityNamed entityCasted && entityCasted.getName() == null) {
-			final CCompany activeCompany =
-					sessionService.getActiveCompany().orElseThrow(() -> new IllegalStateException("No active company in session"));
-			final long typeCount = ((ICustomerTypeRepository) repository).countByCompany(activeCompany);
-			final String autoName = String.format("CustomerType %02d", typeCount + 1);
-			((CEntityNamed<?>) entity).setName(autoName);
+		if (!(entity instanceof final CEntityNamed entityCasted && entityCasted.getName() == null)) {
+			return;
 		}
+		final CCompany activeCompany =
+				sessionService.getActiveCompany().orElseThrow(() -> new IllegalStateException("No active company in session"));
+		final long typeCount = ((ICustomerTypeRepository) repository).countByCompany(activeCompany);
+		final String autoName = "CustomerType %02d".formatted(typeCount + 1);
+		((CEntityNamed<?>) entity).setName(autoName);
 	}
 
 	@Override
