@@ -17,7 +17,9 @@ import tech.derbent.api.session.service.ISessionService;
 import tech.derbent.plm.products.product.service.IProductRepository;
 import tech.derbent.plm.products.producttype.domain.CProductType;
 
-@Profile({"derbent", "default"})
+@Profile ({
+		"derbent", "default"
+})
 @Service
 @PreAuthorize ("isAuthenticated()")
 @Transactional (readOnly = true)
@@ -42,7 +44,7 @@ public class CProductTypeService extends CTypeEntityService<CProductType> implem
 		try {
 			final long usageCount = productRepository.countByType(entity);
 			if (usageCount > 0) {
-				return String.format("Cannot delete. It is being used by %d item%s.", usageCount, usageCount == 1 ? "" : "s");
+				return "Cannot delete. It is being used by %d item%s.".formatted(usageCount, usageCount == 1 ? "" : "s");
 			}
 			return null;
 		} catch (final Exception e) {
@@ -66,13 +68,13 @@ public class CProductTypeService extends CTypeEntityService<CProductType> implem
 	@Override
 	public void initializeNewEntity(final Object entity) {
 		super.initializeNewEntity(entity);
-		if (entity instanceof final CEntityNamed entityCasted && entityCasted.getName() == null) {
-			final CCompany activeCompany =
-					sessionService.getActiveCompany().orElseThrow(() -> new IllegalStateException("No active company in session"));
-			final long typeCount = ((IProductTypeRepository) repository).countByCompany(activeCompany);
-			final String autoName = String.format("ProductType %02d", typeCount + 1);
-			((CEntityNamed<?>) entity).setName(autoName);
+		if (!(entity instanceof final CEntityNamed entityCasted && entityCasted.getName() == null)) {
+			return;
 		}
+		final CCompany activeCompany = sessionService.getActiveCompany().orElseThrow(() -> new IllegalStateException("No active company in session"));
+		final long typeCount = ((IProductTypeRepository) repository).countByCompany(activeCompany);
+		final String autoName = String.format("ProductType %02d", typeCount + 1);
+		((CEntityNamed<?>) entity).setName(autoName);
 	}
 
 	@Override
